5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1716_2496.log
== TEST (2019-05-02 19:39:54) 
-- CODE:
n = int(input)


while n != -1:
	n += n
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input)
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:39:59) 
-- CODE:
n = int(input())


while n != -1:
	n += n
	print(n)
-- OUTPUT:
-1050
-2100
-4200
-8400
-16800
-33600
-67200
-134400
-268800
-537600
-1075200
-2150400
-4300800
-8601600
-17203200
-34406400
-68812800
-137625600
-275251200
-550502400
-1101004800
-2202009600
-4404019200
-8808038400
-17616076800
-35232153600
-70464307200
-140928614400
-281857228800
-563714457600
-1127428915200
-2254857830400
-4509715660800
-9019431321600
-18038862643200
-36077725286400
-72155450572800
-144310901145600
-288621802291200
-577243604582400
-1154487209164800
-2308974418329600
-4617948836659200
-9235897673318400
-18471795346636800
-36943590693273600
-73887181386547200
-147774362773094400
-295548725546188800
-591097451092377600
-1182194902184755200
-2364389804369510400
-4728779608739020800
-9457559217478041600
-18915118434956083200
-37830236869912166400
-75660473739824332800
-151320947479648665600
-302641894959297331200
-605283789918594662400
-1210567579837189324800
-2421135159674378649600
-4842270319348757299200
-9684540638697514598400
-19369081277395029196800
-38738162554790
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:41:46) 
-- CODE:
n = int(input())

x=0
while n != -1:
	x += n
	print(n)	
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:41:53) 
-- CODE:
n = int(input())

x=0
while n != -1:
	x += n
	print(n)	
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:41:56) 
-- CODE:
n = int(input())

x=0
while n != -1:
	x += n
	print(n)	
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:46:24) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	print(x)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:36:14) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	print(x)
	
	n = int(input("a:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:36:30) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	
	
	n = int(input("a:"))
	
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:36:35) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	
	
	n = int(input("a:"))
	
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:36:45) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	
	
	n = int(input("a:"))
	
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:36:52) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	
	
	n = int(input())
	
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:37:02) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	
	
	n = int(input())
	
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 20:37:06) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	print(n)	
-- EXECUTION TIME:
1768.94
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 20:37:06) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	print(n)	
-- EXECUTION TIME:
1768.96
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:37:10) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
		
	n = int(input())
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:37:23) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
		
	n = int(input())
	
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 20:39:09) 
-- CODE:
n = int(input())

x=0

while n != -1:
	x += n
	print(x)
-- EXECUTION TIME:
1730.72
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 20:43:11) 
-- CODE:
n = int(input())


while n != -1:
	n += n
	print(n)
-- EXECUTION TIME:
1540.12
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:32:41) 
-- CODE:
n = int(input())

x = 0

while n != -1 and n =:
	x += n
	n = int(input())
	print(x)
-- ERROR:
File "XXXX", line 5
    while n != -1 and n =:
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:32:56) 
-- CODE:
n = int(input())

x = 0

while n != -1 and:
	x += n
	n = int(input())
	print(x)
-- ERROR:
File "XXXX", line 5
    while n != -1 and:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:32:58) 
-- CODE:
n = int(input())

x = 0

while n != -1:
	x += n
	n = int(input())
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:36:46) 
-- CODE:
n = int(input())

x = 0

while n != -1:
	x += n
	n = int(input())
	print(x)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:37:21) 
-- CODE:
n = int(input())

x = 0

while n != -1:
	x += n
	n = int(input())
	
	
print(x)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:37:28) 
-- CODE:
n = int(input())

x = 0

while n != -1:
	x += n
	n = int(input())
	
	
print(x)
-- EXECUTION TIME:
0.169381
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
